objects/complaint__c.object
<CustomObject>
    <description>Medical Device Complaint used for reporting issues with patients that have a Biotronik device implanted.</description>
    <fields>
        <fullName>CI_Running_Number__c</fullName>
        <description>Stores only the numeric value of latest number. Not displayed on layout as this is only used in code to simplify getting the highest number when custom setting data doesn&apos;t exist.</description>
        <inlineHelpText>Stores only the numeric value of latest number. Not displayed on layout as this is only used in code to simplify getting the highest number when custom setting data doesn&apos;t exist.</inlineHelpText>
        <label>CI Running Number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Doctors_Letter__c</fullName>
        <description>Full text of the doctors letter</description>
        <label>Doctors Letter</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MDRF_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDR_Running_Number__c</fullName>
        <description>Stores only the numeric value of latest number. Not displayed on layout as this is only used in code to simplify getting the highest number when custom setting data doesn&apos;t exist.</description>
        <label>MDR Running Number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_Report_Source_Comment__c</fullName>
        <inlineHelpText>If Report Source = &quot;Other&quot;, enter details here.</inlineHelpText>
        <label>Other Report Source Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pending_My_Approval__c</fullName>
        <formula>OR(

AND(
ISPICKVAL(approval_status__c, &quot;Pending Peer Approval&quot;),
initial_approver__r.Id = $User.Id),

AND(
ISPICKVAL(approval_status__c, &quot;Pending Manager Approval&quot;),
Owner:User.Manager.Id = $User.Id))</formula>
        <label>Pending My Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductIdType__c</fullName>
        <description>Identifies the Product Type. (SAFBIO-1558)</description>
        <formula>IF(

        NOT(ISBLANK(asset_serial_number__c )), &apos;SERIAL_NUMBER_BASED_PRODUCT_ID_TYPE&apos;,

        IF(
        NOT(ISBLANK( asset_lot_number__c )), &apos;LOT_NUMBER_BASED_PRODUCT_ID_TYPE&apos;,

        IF(
        NOT(ISBLANK( udi__c )), &apos;UDI_BASED_PRODUCT_ID_TYPE&apos;,

        &apos;MATERIAL_NUMBER_BASED_PRODUCT_ID_TYPE&apos;
        )))</formula>
        <label>ProductIdType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RP_Number__c</fullName>
        <description>Returned Product Number RP-YEAR-XXXXX
Annually the running number sequence starts from 00001. SFDC automatically generates next number in sequence.</description>
        <label>RP Number</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RP_Running_Number__c</fullName>
        <description>Stores only the numeric value of latest number. Not displayed on layout as this is only used in code to simplify getting the highest number when custom setting data doesn&apos;t exist.</description>
        <label>RP Running Number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Submit_to_Can__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkboc decides if complaint is ready to be submitted to Can</description>
        <label>Submit to Can</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>additional_adverse_event_information__c</fullName>
        <description>Free form field on event report forms to collect additional information</description>
        <inlineHelpText>Including any adverse outcomes for patient</inlineHelpText>
        <label>Additional Adverse Event Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>additional_information_other__c</fullName>
        <description>VI Complaint form, Required if Other selected</description>
        <label>Additional Information, Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>additional_information_vi__c</fullName>
        <description>VI Complaint form, Options - None, Cath Lab Report, X-rays, Angiographic Material, Other</description>
        <label>Additional VI Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Cath Lab Report</fullName>
                </value>
                <value>
                    <fullName>X-rays</fullName>
                </value>
                <value>
                    <fullName>Angiographic Material</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>additional_manufacturer_narrative__c</fullName>
        <description>3500a Question H10</description>
        <label>Additional Manufacturer Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>adverse_event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adverse Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>applied_max_pressure__c</fullName>
        <description>VI Complaint form, in bars</description>
        <inlineHelpText>in bars</inlineHelpText>
        <label>Applied Max. Pressure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>approval_status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending Peer Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Manager Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>SubmitToEMDRPending</fullName>
                    <label>Submitted to EMDR: Pending</label>
                </value>
                <value>
                    <fullName>SubmitToEMDROK</fullName>
                    <label>Submitted to EMDR: Transmit OK</label>
                </value>
                <value>
                    <fullName>SubmitToEMDRFail</fullName>
                    <label>Submitted to EMDR: Transmit Failed</label>
                </value>
                <value>
                    <fullName>FDAResponsePass</fullName>
                    <label>FDA Response: Pass</label>
                </value>
                <value>
                    <fullName>FDAResponseFail</fullName>
                    <label>FDA Response: Fail</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>linkage from complaint to asset</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>asset_implant_date__c</fullName>
        <description>3500a Question D6.</description>
        <label>Implant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>asset_lot_number__c</fullName>
        <description>3500a Question D4.</description>
        <label>Lot Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asset_manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BIOTRONIK</fullName>
                </value>
                <value>
                    <fullName>5500_APC</fullName>
                    <label>AMERICAN PACEMAKER CORP.</label>
                </value>
                <value>
                    <fullName>5500_ACO</fullName>
                    <label>ANGEION CORP.</label>
                </value>
                <value>
                    <fullName>5500_BME</fullName>
                    <label>BIOMEC</label>
                </value>
                <value>
                    <fullName>5500_BSX</fullName>
                    <label>BOSTON SCIENTIFIC</label>
                </value>
                <value>
                    <fullName>5500_CAC</fullName>
                    <label>CARDIAC CONTROL</label>
                </value>
                <value>
                    <fullName>5500_CAI</fullName>
                    <label>CARDIAC IMPULSE</label>
                </value>
                <value>
                    <fullName>5500_CAP</fullName>
                    <label>CARDIAC PACEMAKER</label>
                </value>
                <value>
                    <fullName>5500_CPR</fullName>
                    <label>CARDIAC PRODUCTS</label>
                </value>
                <value>
                    <fullName>5500_CPM</fullName>
                    <label>CARDIO-PACE MEDICAL</label>
                </value>
                <value>
                    <fullName>5500_CHR</fullName>
                    <label>CHRONIC</label>
                </value>
                <value>
                    <fullName>5500_COK</fullName>
                    <label>COOK</label>
                </value>
                <value>
                    <fullName>5500_COI</fullName>
                    <label>CORATOMIC INC.</label>
                </value>
                <value>
                    <fullName>5500_COR</fullName>
                    <label>CORDIS</label>
                </value>
                <value>
                    <fullName>5500_DAI</fullName>
                    <label>DAIG CORP.</label>
                </value>
                <value>
                    <fullName>5500_ES</fullName>
                    <label>EA</label>
                </value>
                <value>
                    <fullName>5500_ELM</fullName>
                    <label>ELA MEDICAL</label>
                </value>
                <value>
                    <fullName>5500_ELS</fullName>
                    <label>ELS</label>
                </value>
                <value>
                    <fullName>5500_ENP</fullName>
                    <label>ENPATH MEDICAL INC.</label>
                </value>
                <value>
                    <fullName>5500_GRE</fullName>
                    <label>GREATBATCH</label>
                </value>
                <value>
                    <fullName>5500_GDT</fullName>
                    <label>GUIDANT</label>
                </value>
                <value>
                    <fullName>5500_IMP</fullName>
                    <label>IMPLANTRONIK</label>
                </value>
                <value>
                    <fullName>5500_INA</fullName>
                    <label>INHO A</label>
                </value>
                <value>
                    <fullName>5500_INH</fullName>
                    <label>INHOUEE</label>
                </value>
                <value>
                    <fullName>5500_INN</fullName>
                    <label>INHOUSEN</label>
                </value>
                <value>
                    <fullName>5500_INO</fullName>
                    <label>INNOMEDICA LTD.</label>
                </value>
                <value>
                    <fullName>5500_INT</fullName>
                    <label>INTERMEDICS INC.</label>
                </value>
                <value>
                    <fullName>5500_MDO</fullName>
                    <label>MEDICO</label>
                </value>
                <value>
                    <fullName>5500_MDT</fullName>
                    <label>MEDTRONIC, INC</label>
                </value>
                <value>
                    <fullName>5500_MYO</fullName>
                    <label>MYOPORE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>asset_model_name__c</fullName>
        <label>Model Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>asset_model_number__c</fullName>
        <description>3500a Question D4.</description>
        <label>Model Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asset_serial_number__c</fullName>
        <description>3500a Question D4.</description>
        <label>Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>biosmart_id__c</fullName>
        <externalId>true</externalId>
        <label>BIOSMART ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>can_case_number__c</fullName>
        <description>Complaint case number assigned by CAN</description>
        <externalId>true</externalId>
        <label>CAN Case Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>can_error_message__c</fullName>
        <description>Shows the last error that occured during CAN submission</description>
        <label>CAN Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to parent case, used for routing through queues and overall usage of service cloud
Complaint object is used for detailed information about the complaint.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>change_comments__c</fullName>
        <description>Used to track comments on why the MDR team makes changes to a Complaint record.</description>
        <label>Change Comments</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ci_number__c</fullName>
        <description>Complaint Investigation Number CI-YEAR-XXXXX
Annually the running number sequence starts from 00001.  SFDC automatically generates next number in sequence.</description>
        <label>CI Number</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>clarification__c</fullName>
        <description>VI Complaint form</description>
        <label>Clarification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mild</fullName>
                </value>
                <value>
                    <fullName>moderate</fullName>
                </value>
                <value>
                    <fullName>severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>combination_product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Combination Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>concomitant_medical_products_and_therapy__c</fullName>
        <description>ACAMPBELL: Future proof for drug eluding stents. Do not include on page layout</description>
        <label>Concomitant Medical Products and Therapy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>corrected_data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3500a Question H11.  Check box noting that it is corrected data.</description>
        <label>Corrected Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>corrected_data_comment__c</fullName>
        <description>3500a Question H.  Text field that contains corrected data</description>
        <label>Corrected Data Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_info_received_by_manufacturer__c</fullName>
        <description>Date when the manufacturer received information that an event has occurred.  Mapped to 3500a field G4.</description>
        <label>Date Info Received by Manufacturer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_of_birth__c</fullName>
        <description>3500a Question A2.</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_of_death__c</fullName>
        <description>3500a Question B2.  Patient&apos;s date of death.</description>
        <label>Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_of_event__c</fullName>
        <description>3500a Question B3.  Date event occurred</description>
        <label>Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_of_last_transmission_to_can__c</fullName>
        <description>Date record was last transmitted to CAN</description>
        <label>Date of Last Transmission to CAN</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_of_manufacture__c</fullName>
        <description>3500a Question H4.  Date the product was manufactured.</description>
        <label>Date of Manufacture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_product_received_by_mdr_team__c</fullName>
        <label>Date Product Received by MDR Team</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_product_returned_by_reporter__c</fullName>
        <description>Date that reporter indicates they are returning product</description>
        <label>Date Product Returned by Reporter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_product_returned_to_manufacturer__c</fullName>
        <description>3500a Question G4.  Ship date of product that is being sent back to Berlin Manufacturer.</description>
        <label>Date Product Returned to Manufacturer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>death_device_related__c</fullName>
        <description>VI Complaint form, Y/N</description>
        <label>Death was Device-related</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Device related</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>Non-Device related</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>device_asset_status__c</fullName>
        <description>Filled in via process builder when Asset is added to Complaint.</description>
        <label>Device Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Capped</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
                <value>
                    <fullName>Explanted</fullName>
                </value>
                <value>
                    <fullName>Implanted</fullName>
                </value>
                <value>
                    <fullName>Partially Capped</fullName>
                </value>
                <value>
                    <fullName>Patient Deceased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>device_available_for_evaluation__c</fullName>
        <description>3500a Question D10.  Indicator if device is available for evaluation by manufacturer.</description>
        <label>Device Available for Evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>no</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>No Information</fullName>
                    <isActive>false</isActive>
                    <label>No Information</label>
                </value>
                <value>
                    <fullName>Not Returned to Manufacturer</fullName>
                    <isActive>false</isActive>
                    <label>Not Returned to Manufacturer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>device_available_for_investigation__c</fullName>
        <description>Rep assertion that they are returning it (options Y/N and must provide date of shipment if Y)</description>
        <label>Device Available for Investigation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>device_code_global__c</fullName>
        <description>3500a Question H6.  Standard codes provided by FDA indicating issue with device.</description>
        <label>Device Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>device_code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>did_device_parts_remain_in_the_patient__c</fullName>
        <description>VI Complaint form, Y/N</description>
        <label>Did Device Parts Remain in the Patient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disability_or_permanent_damage__c</fullName>
        <description>VI Complaint form, Y/N</description>
        <label>Disability or Permanent Damage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>doctors_letter_required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that  the physician of record on the event has requested an analysis of the event from the manufacturer</description>
        <label>Doctors Letter Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>doctors_letter_sent_date__c</fullName>
        <description>Date the doctors letter was printed and mailed</description>
        <label>Doctors Letter Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>emdr_record_ids__c</fullName>
        <description>Record ids of related emdr reports in downstream system. Items delimited by semicolons.
Admin use only - do not use on non-admin page layouts.</description>
        <label>EMDR Record Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ethnicity__c</fullName>
        <description>Patient Ethnicity</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic/Latino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>evaluated_by_manufacturer_explanation__c</fullName>
        <description>required if device was not evaluated by Manufacturer</description>
        <label>Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>evaluation_summary_attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check box value to indicate that manufacture summary is included with report</description>
        <label>Evaluation Summary Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>event_country__c</fullName>
        <label>Event Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AE</fullName>
                    <label>United Arab Emirates</label>
                </value>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BF</fullName>
                    <label>Burkina Faso</label>
                </value>
                <value>
                    <fullName>BG</fullName>
                    <label>Bulgaria</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BI</fullName>
                    <label>Burundi</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BL</fullName>
                    <label>Saint Barthélemy</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BN</fullName>
                    <label>Brunei Darussalam</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Bolivia, Plurinational State of</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>Bonaire, Sint Eustatius and Saba</label>
                </value>
                <value>
                    <fullName>BR</fullName>
                    <label>Brazil</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>event_description__c</fullName>
        <label>Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>event_occured__c</fullName>
        <description>VI Complaint form, Options - Inside patient, outside patient</description>
        <label>Event Occured</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inside Patient</fullName>
                </value>
                <value>
                    <fullName>Outside Patient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>event_reason_global__c</fullName>
        <label>Event Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>event_reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>expiration_date__c</fullName>
        <description>3500a Question D4.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>explant_date__c</fullName>
        <description>3500a Question D7.</description>
        <label>Explant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fda_acceptance_date__c</fullName>
        <description>Date report was accepted by the FDA</description>
        <label>FDA Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fda_rejection_date__c</fullName>
        <description>Date report was rejected by the FDA</description>
        <label>FDA Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>followup_report_date__c</fullName>
        <description>Date of most recent followup report.</description>
        <inlineHelpText>This is the date of the most recent followup report. See history for dates of previous reports.</inlineHelpText>
        <label>Followup Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <description>3500a Question A3.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hospitalization_device_related__c</fullName>
        <description>VI Complaint form, Y/N</description>
        <label>Hospitalization was Device-related</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>